--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,10 @@
         "MIT"
     ],
     "require" : {
-        "php": ">=5.3.9",
-        "symfony/symfony": "2.8.*",
-        "doctrine/orm": "^2.4.8",
-        "doctrine/doctrine-bundle": "~1.4",
+        "php": ">=5.5.9",
+        "symfony/symfony": "3.1.*",
+        "doctrine/orm": "^2.5",
+        "doctrine/doctrine-bundle": "^1.6",
         "sonata-project/easy-extends-bundle": "^2.1"
     },
     "autoload": {
