--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -2,7 +2,8 @@ services:
     acme_mapping_listener:
         class: Acme\ReusableBundle\EventListener\MappingSubscriber
         arguments:
-          - %acme_reusable.cart.class%
-          - %acme_reusable.cart_line.class%
+          - "%acme_reusable.cart.class%"
+          - "%acme_reusable.cart_line.class%"
+          - "%acme_reusable.purchasable_map%"
         tags:
             - { name: doctrine.event_listener, event: loadClassMetadata }
