--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,7 @@
     ],
     "require" : {
         "php": ">=5.5.9",
-        "symfony/symfony": "3.1.*",
-        "doctrine/orm": "^2.5",
-        "doctrine/doctrine-bundle": "^1.6",
-        "sonata-project/easy-extends-bundle": "^2.1"
+        "symfony/symfony": "3.1.*"
     },
     "autoload": {
         "psr-4": { "Acme\\ReusableBundle\\": "" }
