--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,7 @@
         "MIT"
     ],
     "require" : {
-        "php": ">=5.5.9",
-        "symfony/symfony": "3.1.*",
-        "doctrine/orm": "^2.5",
-        "doctrine/doctrine-bundle": "^1.6"
+        "php": ">=5.5.9"
     },
     "autoload": {
         "psr-4": { "Acme\\ReusableBundle\\": "" }
